tdf#151352 crash closing form while the tip of the day dialog is displayed

Change-Id: I61826ab4d8873f82f7885e26a22d307e2d574e17
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141001
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 81051d1fccffddf3e16d92bef0d0853a65afc8b8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140968
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>